@@ -4,11 +4,11 @@ This file provides guidance to Claude Code (claude.ai/code) when working with co
 
 ## Project Overview
 
-FormReturn is a Java 8 Swing-based Optical Mark Recognition (OMR) desktop application for designing, scanning, and processing forms. It includes a form designer GUI, a background server daemon with Quartz-scheduled tasks, scanner integration (TWAIN/SANE/ICA), and an installer wizard.
+FormReturn is a Java 21 Swing-based Optical Mark Recognition (OMR) desktop application for designing, scanning, and processing forms. It includes a form designer GUI, a background server daemon with Quartz-scheduled tasks, scanner integration (TWAIN/SANE/ICA), and an installer wizard. Originally built for Java 8, the codebase was upgraded to Java 21 with generics, deprecated API replacements, and reflection-based access to internal JDK APIs.
 
 ## Build Commands
 
-Requires **OpenJDK 8** and **Maven**. On Mac: `export JAVA_HOME=$(/usr/libexec/java_home -v 1.8)`
+Requires **OpenJDK 21** (or later) and **Maven**. On Mac: `export JAVA_HOME=$(/usr/libexec/java_home -v 21)`
 
 ```bash
 # Build the main library (from project root)
@@ -18,7 +18,7 @@ mvn clean install
 cd installer && mvn clean package
 ```
 
-The installer produces a Mac `.app`, Windows NSIS `.exe`, and cross-platform fat JAR in `installer/target/`. Windows installer build requires NSIS (`apt install nsis`).
+The installer produces a Mac `.app`, Windows NSIS `.exe`, and cross-platform fat JAR in `installer/target/`. The macOS `.app` is built with `jpackage` (bundled with JDK 14+), which embeds the JDK runtime automatically. The Windows NSIS installer step only runs on Windows (Maven profile `windows-installer`) and requires NSIS (`apt install nsis`).
 
 ## Testing
 
@@ -29,6 +29,19 @@ Tests use JUnit 4 and are in a non-standard location: `test/main/java/` (not `sr
 ### Two-step build
 
 The root `pom.xml` and `installer/pom.xml` are **separate Maven projects** (not a parent-child module). Build root first with `mvn clean install`, then build the installer.
+
+### Installer build pipeline (`installer/pom.xml`)
+
+The installer `package` phase runs these steps in order:
+
+1. **`maven-dependency-plugin:copy-dependencies`** (prepare-package) — copies all runtime JARs (version-stripped) to `target/jpackage-input/`
+2. **`launch4j`** — creates Windows `.exe` wrappers (`formreturn.exe`, `formreturn_server.exe`)
+3. **`maven-assembly-plugin`** — creates fat JAR (`formreturn_setup_1.7.5.jar`) with all deps under `lib/`
+4. **`antrun:create-app-bundle`** — invokes `jpackage --type app-image` to create `target/app/FormReturn.app` with embedded JDK runtime, secondary "FormReturn Server" launcher (`--add-launcher`), `.frf`/`.frs` file associations, and `--add-opens` flags for XStream reflection. Copies `jsonscan` into `Contents/Resources/`
+5. **`antrun:update-app-bundle-into-uberjar`** — extracts fat JAR to `target/appbundle/`, creates `formreturn_server.jar` with classpath manifest, updates fat JAR
+6. **`antrun:create-a-windows-signed-nsis-installer`** — Windows-only (Maven profile `windows-installer`), builds NSIS installer
+
+Config files for jpackage are in `installer/jpackage/` (server launcher properties, file association properties).
 
 ### Main packages under `src/main/java/com/ebstrada/`
 
@@ -56,14 +69,14 @@ The root `pom.xml` and `installer/pom.xml` are **separate Maven projects** (not 
 
 ### Persistence
 
-- **JPA provider**: Apache OpenJPA 2.4.3 with build-time bytecode enhancement (`openjpa-maven-plugin` at `process-classes` phase)
+- **JPA provider**: Apache OpenJPA 3.2.2 with build-time bytecode enhancement (`openjpa-maven-plugin` at `process-classes` phase, enhancer execution disabled for Java 21 class format compatibility)
 - **Database**: Apache Derby (embedded or networked), schema `FORMRETURN`
 - **Entity classes**: 21 entities in `com.ebstrada.formreturn.manager.persistence.jpa` — configured in `src/main/resources/META-INF/persistence.xml`
-- **Preferences/form files**: Serialized via XStream
+- **Preferences/form files**: Serialized via XStream (requires `--add-opens java.desktop/java.awt=ALL-UNNAMED` at runtime for `Dimension`/`Color`/`Rectangle` reflection)
 
 ### Key dependencies
 
-- **Derby 10.14.2.0** — Last version compatible with Java 8 (10.15+ requires Java 11)
+- **Derby 10.14.2.0** — Retained from the Java 8 era; could be upgraded to 10.15+ now that the project targets Java 21
 - **Quartz 2.3.2** — Job scheduling (uses `@DisallowConcurrentExecution`, `JobBuilder`/`TriggerBuilder` pattern)
 - **Apache FOP 2.9** — PDF generation via XSL-FO; factory created with `FopFactory.newInstance(URI, InputStream)`
 - **OpenCSV 5.9** — CSV import/export; uses `CSVReaderBuilder`/`CSVParserBuilder` pattern (package: `com.opencsv`)
